# ferit

./: README.md
algorithms/: CMakeLists.txt  zad_1  zad_1.c
algorithms/include/: timings.h
algorithms/lab_1/: zad_1.c
algorithms/lab_2/: main.c  zad_1.c
algorithms/lab_3/: main.c
algorithms/src/: timings.c
algorithms/src/lab_1/: main.c
algorithms/src/lab_2/: main.c
algorithms/src/lab_3/: main.c
algorithms/src/lab_4/: main.c
algorithms/src/lab_5/: main.c
machine-lerning/: README.md
machine-lerning/FCN/: fingerprint.pb  saved_model.pb
machine-lerning/FCN/variables/: variables.data-00000-of-00001  variables.index
machine-lerning/StreetSignData/: fingerprint.pb  keras_metadata.pb  saved_model.pb
machine-lerning/StreetSignData/variables/: variables.index
machine-lerning/lab_1/: zad_1.py  zad_2.py  zad_3.py  zad_4.py  zad_5.py  zad_6.py
machine-lerning/lab_2/: zad_1.py  zad_2.py  zad_3.py  zad_4.py  zad_5.py
machine-lerning/lab_5/: skripta_5_2.py  zad_1.py  zad_2.py  zad_3.py  zad_4.py
machine-lerning/lab_6/: skripta_6_1.py  skripta_6_2.py
machine-lerning/lab_7/: zad_1.py  zad_2.py
